# crondog

./: Solution.txt  pyproject.toml
scripts/: log_time.py  log_time.sh
src/: cronjob.py  process.py
src/crondog/: cli.py  crondog.py  daemon.py
