[project]
name = "quantdev"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cron-descriptor (>=1.4.5,<2.0.0)",
    "pendulum (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "quantdev", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
